--- a/apps/v4/content/docs/components/calendar.mdx
+++ b/apps/v4/content/docs/components/calendar.mdx
@@ -98,8 +98,8 @@ You can use the `<Calendar>` component to build a date picker. See the [Date Pic
 To use the Persian calendar, edit `components/ui/calendar.tsx` and replace `react-day-picker` with `react-day-picker/persian`.
 
 ```diff
-- import { DayPicker } from 'react-day-picker';
-+ import { DayPicker } from 'react-day-picker/persian';
+- import { DayPicker } from "react-day-picker"
++ import { DayPicker } from "react-day-picker/persian"
 ```
 
 <ComponentPreview
