feat: tooltip can now accept an highlight

--- a/apps/www/content/docs/components/tooltip.mdx
+++ b/apps/www/content/docs/components/tooltip.mdx
@@ -62,7 +62,7 @@ import {
 <TooltipProvider>
   <Tooltip>
     <TooltipTrigger>Hover</TooltipTrigger>
-    <TooltipContent>
+    <TooltipContent highlight="Ctrl + K">
       <p>Add to library</p>
     </TooltipContent>
   </Tooltip>
