--- a/apps/www/content/docs/tailwind-v4.mdx
+++ b/apps/www/content/docs/tailwind-v4.mdx
@@ -314,7 +314,7 @@ For existing projects, follow the steps below to migrate.
 
 ### March 12, 2025 - New Dark Mode Colors
 
-We've revisted the dark mode colors and updated them to be more accessible.
+We've revisited the dark mode colors and updated them to be more accessible.
 
 If you're running an existing Tailwind v4 project (**not an upgraded one**[^1]), you can update your components to use the new dark mode colors by re-adding your components using the CLI[^2].
 
