docs: switch to latest

--- a/apps/v4/content/docs/installation/tanstack.mdx
+++ b/apps/v4/content/docs/installation/tanstack.mdx
@@ -108,7 +108,7 @@ Add the following code to the `tsconfig.json` file to resolve paths.
 Run the `shadcn` init command to setup your project:
 
 ```bash
-npx shadcn@canary init
+npx shadcn@latest init
 ```
 
 This will create a `components.json` file in the root of your project and configure CSS variables inside `src/styles/app.css`.
