docs(monorepo): give alert when init project with Windwos system operation

--- a/apps/v4/content/docs/(root)/monorepo.mdx
+++ b/apps/v4/content/docs/(root)/monorepo.mdx
@@ -23,6 +23,14 @@ for you.
 To create a new monorepo project, run the `init` command. You will be prompted
 to select the type of project you are creating.
 
+<Alert>
+  <Terminal className="h-4 w-4" />
+  <AlertTitle>Heads up!</AlertTitle>
+  <AlertDescription>
+   If you are using Windows operating system, use Windows built-in terminal such as Command Prompt (CMD) to avoid errors.
+  </AlertDescription>
+</Alert>
+
 ```bash
 npx shadcn@canary init
 ```
