--- a/apps/v4/content/docs/components/index.mdx
+++ b/apps/v4/content/docs/components/index.mdx
@@ -3,4 +3,9 @@ title: Components
 description: Here you can find all the components available in the library. We are working on adding more components.
 ---
 
+<Callout className="mb-6">
+  Looking for more components? Check out the [Components
+  Community](/docs/components/community) page.
+</Callout>
+
 <ComponentsList />
