fix(sidebar): correct state calculation in mobile view
previously, derive state only from open (desktop view)

change to derive state from openMobile when isMobile is true, otherwise from open

fix sidebar state not updating correctly on mobile

Resolves: #7808

--- a/apps/www/content/docs/components/sidebar.mdx
+++ b/apps/www/content/docs/components/sidebar.mdx
@@ -1392,3 +1392,7 @@ Fixed typo in `useSidebar` hook.
 -  throw new Error("useSidebar must be used within a Sidebar.")
 +  throw new Error("useSidebar must be used within a SidebarProvider.")
 ```
+
+### 2025-07-22 Fixed mobile state bug
+
+- Fixed a bug where the `state` from the `useSidebar` hook did not update correctly in mobile view.
