docs(shadcn): add unified-radix-imports option to CLI documentation

--- a/apps/v4/content/docs/(root)/cli.mdx
+++ b/apps/v4/content/docs/(root)/cli.mdx
@@ -34,6 +34,7 @@ Options:
   --no-src-dir                   do not use the src directory when creating a new project.
   --css-variables                use css variables for theming. (default: true)
   --no-css-variables             do not use css variables for theming.
+  --unified-radix-imports         replace @radix-ui/react-* imports in added files with unified radix-ui imports and install radix-ui
   -h, --help                     display help for command
 ```
 
@@ -66,6 +67,7 @@ Options:
   --no-src-dir        do not use the src directory when creating a new project.
   --css-variables     use css variables for theming. (default: true)
   --no-css-variables  do not use css variables for theming.
+  --unified-radix-imports         replace @radix-ui/react-* imports in added files with unified radix-ui imports and install radix-ui
   -h, --help          display help for command
 ```
 
